@@ -1741,24 +1741,6 @@ Rboolean GRecording(SEXP call, pGEDevDesc dd)
     return GErecording(call, dd);
 }
 
-/* Will GNewPlot() produce new page ? 
- * MUST be kept in synch with logic of GNewPlot below 
- */
-int GNewPage() 
-{
-    pGEDevDesc dd;
-    int result = 0;
-    dd = GEcurrentDevice();
-    if (gpptr(dd)->new) {
-        if (!gpptr(dd)->state) 
-            result = 1;
-    } else {
-	if (gpptr(dd)->currentFigure + 1 > gpptr(dd)->lastFigure) 
-            result = 1;
-    }
-    return result;
-}
-
 /*  GNewPlot -- Begin a new plot (advance to new frame if needed)  */
 pGEDevDesc GNewPlot(Rboolean recording)
 {
@@ -1780,6 +1762,11 @@ pGEDevDesc GNewPlot(Rboolean recording)
     /* we can call par(mfg) before any plotting.
        That sets new = TRUE and also sets currentFigure <= lastFigure
        so treat separately. */
+
+    /* The logic for when to start a new page is mimiced in the
+     * read-only par("page") in par.c, SO if you make changes
+     * to the logic here, you will need to change that as well
+     */
     if (!gpptr(dd)->new) {
 	R_GE_gcontext gc;
 	gcontextFromGP(&gc, dd);
